# pyresults

./: .gitignore  LICENSE  main_window.ui  pyproject.toml
py_results/: __init__.py  db_init.py  main_window.py
